# service-mesh-simulation

./: .env  README.md  docker-compose.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: error.rs  health_check.rs  login.rs  main.rs  register.rs  route.rs  state.rs  validate.rs
frontend/: Dockerfile  index.html  nginx.conf  script.js  styles.css
gateway-service/: Cargo.toml  Dockerfile
gateway-service/src/: error.rs  health_check.rs  main.rs  route.rs  state.rs
gateway-service/src/handlers/: auth.rs  mod.rs  users.rs
user-service/: .gitignore  Cargo.toml  Dockerfile
user-service/src/: auth.rs  error.rs  health_check.rs  main.rs  models.rs  route.rs  state.rs
user-service/src/handlers/: create_user.rs  delete_user.rs  get_user.rs  get_users.rs  mod.rs  update_user.rs
