[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "^0.8"
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = "9"
chrono = "0.4"
bcrypt = "0.15"  # For password hashing
uuid = { version = "1.0", features = ["v4", "serde"] }  # For generating user IDs
thiserror = "1.0"
anyhow = "1.0"