[package]
name = "gateway-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "^0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"